# crown

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-03-31_create_prompt_table.py
crown/: fetcher.py  models.py
crown/database/: models.py
misc/: create_prompt_payload.json
