[tool.poetry]
name = "crown"
version = "0.1.0"
description = ""
authors = ["nufny <nufny@zweitekassabitte.jetzt>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
SQLAlchemy = "^2.0.28"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
isort = "^5.13.2"
pdbpp = "^0.10.3"


[tool.poetry.group.deps.dependencies]
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
